Fix unused imports, add percentage to attunable items